--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -3,8 +3,10 @@
     <ion-card>
       <ion-card-header class="ion-text-center">
         <ion-card-title>Login</ion-card-title>
+        <ion-card-title>{{message}}</ion-card-title>
       </ion-card-header>
       <ion-card-content>
+
         <form (ngSubmit)="logForm()">
           <ion-item>
             <ion-label position="floating">Email</ion-label>
